--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
         <junit.version>5.10.1</junit.version>
         <mockito.version>5.11.0</mockito.version>
+        <graphql.version>22.2</graphql.version>
 
         <nexus.plugin.version>1.6.13</nexus.plugin.version>
         <gpg.plugin.version>3.1.0</gpg.plugin.version>
